--- a/style.css
+++ b/style.css
@@ -367,3 +367,33 @@ hr {
     top: 35%;
     transform: translate(-50%, -50%);
 }
+
+.social-link {
+    text-align: center;
+}
+
+.social-link .bi {
+    height: 40px;
+    width: 40px;
+    font-size: 20px;
+    line-height: 40px;
+    margin: 40px 5px 0;
+    color: #009688;
+    cursor: pointer;
+    transition: 5s;
+}
+
+.social-link .bi:hover {
+    color: #ff9900;
+}
+
+.social-link p {
+    font-size: 12px;
+    margin-top: 20px;
+}
+
+.footer-left .bi, .footer-right .bi {
+    font-size: 20px;
+    color: #009688;
+    margin: 10px;
+}
